@@ -7,7 +7,7 @@
 
 string sv_name = "##name##";
 string sv_value = "##value##";
-object target_sv = dom.GetObject(sv_name);
+object target_sv = dom.GetObject(ID_SYSTEM_VARIABLES).Get(sv_name);
 if (target_sv) {
-    WriteLine(target_sv.State(sv_value));
+    Write(target_sv.State(sv_value));
 }
