@@ -1,6 +1,7 @@
 Version 1.1.2 (2022-04-12)
 - Add extra_params to _post_script
 - Add set_system_variable with string value
+- Disallow html tags in string system variable
 
 Version 1.1.1 (2022-04-11)
 - Read version and serial in get_client
